# flowcheck

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.slim  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_client.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/: implement.md  specs.md
docs/deployment/: CI-CD.md  Docker.md  Kubernetes.md  README.md  Troubleshooting.md  docker-validation-report.md
docs/guides/: managing-security-flags.md  setup-claude.md  setup-copilot.md  setup-cursor.md  using-smart-intent.md
docs/ops/: implement.md  specs.md
docs/ops/v0.1/: high-value-features.md  implement.md  security-semantic.md
docs/ops/v0.2/: implement.md  smart-intent.md
docs/ops/v0.3/: implement.md
docs/ops/v0.4/: README.md  audit-report.md  implement.md  implementation-complete.md
rules/: flowcheck-rules.md
src/flowcheck/: __init__.py  cli.py  server.py
src/flowcheck/config/: __init__.py  loader.py
src/flowcheck/core/: __init__.py  git_analyzer.py  ignorer.py  models.py
src/flowcheck/guardian/: __init__.py  injection_filter.py  sanitizer.py
src/flowcheck/hooks/: __init__.py  installer.py  templates.py
src/flowcheck/intent/: __init__.py
src/flowcheck/llm/: __init__.py  anthropic_client.py  client.py  prompts.py
src/flowcheck/rules/: __init__.py  engine.py
src/flowcheck/semantic/: __init__.py  indexer.py  search.py
src/flowcheck/session/: __init__.py  manager.py
src/flowcheck/telemetry/: __init__.py  audit_logger.py  otel_emitter.py
tests/: __init__.py  test_anthropic_client.py  test_cli.py  test_git_analyzer.py  test_hooks.py  test_incremental_indexing.py  test_injection_filter.py  test_intent.py  test_rules_engine.py  test_sanitizer.py  test_semantic.py  test_server.py  test_session.py  test_telemetry.py  test_v0_2_config_ignore.py  test_v0_2_smart_intent.py
